ucspi-tcp (@version@-@release@) unstable; urgency=low

  * tcpserver.c renamed SSL_CIPHER to TLS_CIPHER_LIST
  * tcpclient.c: added SSL/TLS support
  * tcpclient.c: added client mode feature making prog optional