@@ -5,6 +5,11 @@ Release 1.1 Start 14/02/2021
 - 03/03/2021
 02. tcpclient.c: added SSL/TLS support
 03. tcpclient.c: added client mode feature making prog optional
+- 04/03/2021
+04. tls.c: added option to match host with common name
+05. tcpclient.c, tcpserver.c: Use CERTSDIR env variable to specify custom
+    certificate location
+06. tcpclient.c: added -m option to match host with common name
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 21/05/2020
